# hanjadict

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
docs/: concat.py  pip_test.py  usage.sh
src/hanjadict/: __init__.py  dev.py  main.py  table.py
tests/: test_hanjadict.py
