[project]
authors = [
  {name = "Seyoung Song", email = "seyoung.song@kaist.ac.kr"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
description = "A lightweight Python library for looking up Korean Hanja characters with their 훈음 (Hun-eum) meanings and pronunciations"
dynamic = ["version"]
license = "MIT"
name = "hanjadict"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/seyoungsong/hanjadict"
Issues = "https://github.com/seyoungsong/hanjadict/issues"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling >= 1.26"]

[tool.hatch.version]
path = "src/hanjadict/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  ".vscode/",
  "Taskfile.yml",
  "docs/",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "isort",
  "mypy",
  "build",
  "twine",
  "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
